PSoC/PSoCWagen/PsocWagen.cydsn/REBUILD.log
--------------- Rebuild Started: 12/11/2022 20:32:51 Project: MijnTaken.c, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I..\..\UCLL_Koen_lib.cylib\myFreeRTOS\Source\include -I..\..\UCLL_Koen_lib.cylib\myFreeRTOS\Source -I..\..\UCLL_Koen_lib.cylib\myFreeRTOS -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/MijnTaken.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c MijnTaken.c -o .\CortexM3\ARM_GCC_541\Debug\MijnTaken.o
In file included from MijnTaken.c:3:0:
MijnTaken.c: In function 'motorSturing':
./Wagen.h:13:31: error: expected expression before '=' token
 #define                 LINKS = 0
                               ^
MijnTaken.c:24:21: note: in expansion of macro 'LINKS'
         setVermogen(LINKS,snelheden[LINKS]);
                     ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 12/11/2022 20:32:55 ---------------
